--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "concurrently": "^5.1.0"
   },
+  "dependencies": {
+    "dotenv": "^10.0.0"
+  },
   "engines": {
     "npm": "7.x"
   }
